1998-07-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* realpath.c (realpath): Renamed from myrealpath.

	* misc.h: Include string.h stdlib.h, and config.h.

	* find_executable.c (find_executable): Use realpath instead of 
	myrealpath.

	* Makefile.am (libmisc_la_LIBADD): Set to substituted value
	of MISCOBJS.  Remove memchr, memcpy, memset, realpath,
	stpcpy, strchr, strcmp, strdup, strlen, strncmp, strndup, strnlen,
	strpbrk, and strsep from SRC.

	* misc.h: Declare removed functions above if corresponding HAVE_*
	macro is not defined.  

1998-07-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* find_executable.c, realpath.c: Include misc.h last.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (SRC): Add memcpy.c, memchr.c, strncmp.c, strchr.c,
	and strpbrk.c.
	(noinst_HEADERS): Add mem.h.

	* strndup.c: Don't include stdio.h or sys/types.h.

	* misc.h: Add declaration of memcpy, memchr, strpbrk, strncmp, and
	strlen.
	(__ptr_t): Make it a macro instead of a typedef.

	* memset.c: Include mem.h instead of having local defines.

	* memcpy.c, memchr.c, strlen.c: New files.

	* mem.h: New file (defines common to memset.c and memcpy.c).

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* argp-fmtstream.c, argp-help.c, argp-parse.c, getopt.c: Include
	misc.h after standard includes.

	* argp-help.c, argp-parse.c: Constify vt and short_index (return
	of strchr).

	* misc.h: Declare strchr, strcmp, and memset.

	* Makefile.am (lib_LIBRARIES, libmisc_a_SOURCES): Remove.
	(noinst_HEADERS): Include argp-fmtstream.h and argp-namefrob.h.
	(SRC): Add strcmp.c, strchr.c, and memset.c.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libmisc_la_SOURCES,
	libmisc_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New variables.
	Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.
