@@ -10,11 +10,18 @@ INCLUDES = -I$(srcdir)/..
 
 lib_LTLIBRARIES = libmisc.la
 
+EXTRA_DIST = memchr.c memcpy.c memset.c \
+	realpath.c \
+	stpcpy.c strchr.c strcmp.c strdup.c strlen.c strncmp.c \
+	strndup.c strnlen.c strpbrk.c strsep.c
+
 SRC = getopt.c getopt1.c xmalloc.c find_executable.c \
 	argp-ba.c argp-eexst.c argp-fmtstream.c argp-fs-xinl.c  \
 	argp-help.c argp-parse.c argp-pv.c argp-pvh.c argp-xinl.c
 
 noinst_HEADERS = argp-fmtstream.h argp-namefrob.h mem.h
+
+libmisc.la: $(libmisc_la_LIBADD)
 
 libmisc_la_SOURCES = $(SRC)
 libmisc_la_LIBADD = @MISCOBJS@
